--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ body {
 main {
   align-items: center;
   display: flex;
-  height: 50%;
   flex-direction: column;
   justify-content: space-between;
   padding: 5% 0 5% 0;
@@ -116,9 +115,11 @@ header .country-name {
 main ul {
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   height: 100%;
   justify-content: space-around;
-  margin-top: 3%;
+  margin: 20px 0;
+  max-width: 1800px;
   width: 90%;
 }
 
@@ -129,9 +130,13 @@ main ul {
 .weather-card {
   background-color: white;
   border-radius: 5px;
-  box-sizing: border-box;
   box-shadow: 10px 10px 5px #0000003a;
+  box-sizing: border-box;
+  flex-grow: 1;
   height: 100%;
+  margin: 10px;
+  max-width: 295px;
+  min-width: 196px;
   padding: 25px;
   width: 17%;
 }
@@ -150,6 +155,7 @@ main ul {
 .weather-card .temperature-number {
   font-size: 5rem;
   font-weight: bold;
+  text-align: center;
 }
 
 .weather-card .temperature-unit {
