--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 5% 0 5% 0;
+  padding: 20px 0 20px 0;
 }
 
 /*
@@ -152,7 +152,7 @@ main ul {
 }
 
 .weather-card .day {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .weather-card .temperature {
@@ -163,7 +163,7 @@ main ul {
 }
 
 .weather-card .temperature-number {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: bold;
   text-align: center;
 }
@@ -171,6 +171,13 @@ main ul {
 .weather-card .temperature-unit {
   font-size: 2rem;
   padding-top: 10px;
+}
+
+.weather-card .temperature-level {
+  font-size: 2rem;
+  padding: 0 0 10px 10px;
+  font-weight: 300;
+  align-self: flex-end;
 }
 
 .weather-card .current-weather {
@@ -182,7 +189,7 @@ main ul {
 
 .weather-card .weather-icon {
   font-size: 3rem;
-  text-align: center;
+  text-align: left;
   width: 100px;
 }
 
@@ -195,4 +202,5 @@ footer {
   font-weight: 100;
   text-align: center;
   width: 100%;
+  height: 20px;
 }
